# semker-python-stuff

./: .env.example  .gitignore  README.md  pyproject.toml
src/semker_python/: main.py
src/semker_python/data/: dinosaurs.csv
src/semker_python/ingestion/: loader.py
src/semker_python/rag/: answer.py  prompts.py  search.py
src/semker_python/vectordb/: qdrant_store.py
